no sirve ya se viene el formateo final

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.messages.basename=messages,config.i18n.messages
+server.port = 20001
