Add pagination y refactor gracias a sonar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.messages.basename=messages,config.i18n.messages
 server.port = 20001
+
+spring.data.rest.page-param-name = page
+spring.data.rest.limit-param-name = limit
+spring.data.rest.sort-param-name = sort
+spring.data.rest.default-page-size = 5
+spring.data.rest.max-page-size = 10
