--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 		    <version>0.9.1</version>
 		</dependency>
 				
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports</artifactId>
+		    <version>6.15.0</version>
+		</dependency>
 				
 		<dependency>
 		    <groupId>org.flywaydb</groupId>
